# site2pdf

./: .gitignore  AUTHENTICATION.md  CACHE_DOCUMENTATION.md  CACHE_VALIDATION_PLAN.md  CHANGELOG.md  CLAUDE.md  EMAIL_OTP_AUTHENTICATION.md  EXECUTABLE.md  JAVASCRIPT_AUTH.md  README.md  TODO_SYSTEM.md  UPDATES_SUMMARY.md  build_executable.bat  build_executable.sh  config.yaml  deploy_local.sh  install_js_deps.py  notes  package.json  pyproject.toml  requirements.md  requirements.txt  run.py  setup.py  site2pdf.spec  test_content_extraction.py  test_exclude.py  test_js_render.py  test_js_simple.py  todos.yaml  version.json
docs/: requirements.md
generators/: README.md  __init__.py
generators/epub/: __init__.py
generators/html/: __init__.py
generators/markdown/: README.md  __init__.py  markdown_generator.py
generators/pdf/: __init__.py  pdf_generator.py
src/: __init__.py  cache_cli.py  cache_manager.py  chunk_manager.py  cli.py  content_classifier.py  extractor.py  human_behavior.py  js_renderer.py  main.py  path_scoping.py  pdf_generator.py  preview.py  preview_cache.py  progress_tracker.py  scraper.py  todo_cli.py  todo_manager.py  utils.py
system_tools/: README.md  __init__.py
system_tools/authentication/: README.md  __init__.py  auth_manager.py  credential_manager.py  exceptions.py  requirements.txt  session_store.py  utils.py
system_tools/authentication/config/: __init__.py  auth_config.py  site_configs.py
system_tools/authentication/plugins/: __init__.py  base_plugin.py  email_otp.py  generic_form.py  js_auth_mixin.py
system_tools/authentication/plugins/examples/: __init__.py  github.py
system_tools/config/: __init__.py
system_tools/logging/: __init__.py
system_tools/monitoring/: __init__.py
system_tools/versioning/: README.md  __init__.py  version.json  version_manager.py
tests/: __init__.py  conftest.py  test_cache_manager.py  test_preview.py  test_scraper.py
todos/completed/: c299e3f4.md  eaee040f.md  fb0a0cf7.md
todos/in_progress/: 370f094e.md
todos/pending/: 370f094e.md  639d4552.md  92dc3eb0.md  ed55868e.md
